version 1.0.2
- generalize support for TRAMO and X-12-ARIMA to gtk-1.2
  version, and win32 version
- add installation script for tramo program
- make range-mean graph editable via gui
- fix utf8/character encoding issue with editing gnuplot
  commands and sending the commands to gnuplot
- fix bug in test for balanced panel and reading of panel
  structure
- panel models: implement a valid autocorrelation test, and 
  make the ARCH test unavailable
- fix bug in generating lagged variables with panel data
- put a limit of 1024 on the number of forecasts that can be 
  called for, in the "forecast with standard errors" routine
  (could exhaust virtual memory)
- add menu item to restructure a panel data set from stacked
  cross-section to stacked time series
- create data set using internal spreadsheet: fix bug in
  the setting of date strings

11/27/02 version 1.0.1
- fix to configure script in re. glib-2.0
- fix missing name of dependent var in gui mpols printout
- remove RTF and LaTeX items from mpols copy options (not yet
  implemented) in gui2
- fix bug in saving gnuplot commands to file
- updates to updater function in gui program (both gui and gui2)
- add rudimentary plugin support for TRAMO and X-12-ARIMA
  (experimental, and disabled by default)
- fix font encoding for postscript graphs in gtk-1.2 version of
  gretl_x11 (also make postscript graphs in color by default)
- fix bug in automatic generation of lags for regression (the
  command was not getting recorded properly in the log file)
- fix bug in model printout when F() is undefined (line-break
  was missing)
- fix bug in LaTeX output when a coefficient equals zero
- make "sim" command available in loops (and update docs)
- raise "revision" number of *nix library

11/15/02 version 1.0
- change *nix library name to libgretl-1.0
- improve sizing of some windows
- incorporate new translations
- update appearance of gtk-1.2 version of gui
- fix the stats available in connection with a LAD model