@@ -868,6 +868,12 @@ int main (int argc, char *argv[])
     main_menubar_state(FALSE);
 			  
     check_for_extra_data();
+#ifdef HAVE_TRAMO
+    set_tramo_ok(-1);
+#endif
+#ifdef HAVE_X12A
+    set_x12a_ok(-1);
+#endif
 
     if (!gui_get_data)
 	register_data(paths.datfile, 1);
@@ -1633,6 +1639,20 @@ void gretl_fork (const char *prog, const char *arg)
 
 /* ........................................................... */
 
+#ifdef G_OS_WIN32
+static char *slash_convert (char *str)
+{
+    char *p = str;
+
+    while (*p) {
+	if (*p == '\\') p = '/';
+	p++;
+    }
+
+    return str;
+}
+#endif
+
 static void startR (gpointer p, guint opt, GtkWidget *w)
 {
     char Rdata[MAXLEN], line[MAXLEN];
@@ -1677,7 +1697,11 @@ static void startR (gpointer p, guint opt, GtkWidget *w)
 	fprintf(fp, "source(\"%s\")\n", Rdata);
 	fprintf(fp, "ls()\n");
     } else {
+#ifdef G_OS_WIN32
+	fprintf(fp, "gretldata <- read.table(\"%s\")\n", slash_convert(Rdata));
+#else
 	fprintf(fp, "gretldata <- read.table(\"%s\")\n", Rdata);
+#endif
 	fprintf(fp, "attach(gretldata)\n");
 	fprintf(fp, "ls(2)\n");
     }
@@ -1720,7 +1744,7 @@ static void startR (gpointer p, guint opt, GtkWidget *w)
     free(s0); 
     free(s1); 
     free(s2);
-#endif 
+#endif /* G_OS_WIN32 */
 }
 
 /* ........................................................... */
