@@ -1,6 +1,6 @@
 version 1.0.2
-- generalize support for TRAMO and X-12-ARIMA to gtk-1.2
-  version, and win32 version
+- generalize support for X-12-ARIMA to gtk-1.2 version, and 
+  win32 version.  TRAMO/SEATS is more difficult
 - add installation script for tramo program
 - make range-mean graph editable via gui
 - fix utf8/character encoding issue with editing gnuplot
@@ -17,6 +17,8 @@ version 1.0.2
   cross-section to stacked time series
 - create data set using internal spreadsheet: fix bug in
   the setting of date strings
+- fix bug in invocation of GNU R under Windows (needed to
+  replace "\" with "/" in paths for use by Rgui.exe)
 
 11/27/02 version 1.0.1
 - fix to configure script in re. glib-2.0
